Fixes Results Page Cramped Text

--- a/app/scss/brands/maytag/_app-main-mt.scss
+++ b/app/scss/brands/maytag/_app-main-mt.scss
@@ -609,13 +609,17 @@ div[ng-class="fr_CA"] {
 		display: none !important;
 	}
     .mobile-results-nav li:nth-child(2) img {
-        transform:scale(1.2);
-        margin-bottom: 10px;
+        -webkit-transform:scale(1.1);
+        transform:scale(1.1);
         letter-spacing: .2px;
+        padding: 10% 5% !important;
     }
     .mobile-results-nav li:nth-child(odd) span {
         font-family: 'Akzidenz Grotesk Condensed' !important;
         letter-spacing: .2px;
+    }
+    .mobile-results-nav li span {
+        font-size: 12px !important;
     }
     #results .mobile-results-nav li .active:after{
         content: " ";
@@ -623,9 +627,6 @@ div[ng-class="fr_CA"] {
         height: 22px;
         width: 10px;
         margin: 25px 0 0 0;
-        -ms-transform: translate(-50%, 0%);
-        -o-transform: translate(-50%, 0%);
-        -moz-transform: translate(-50%, 0%);
         -webkit-transform: translate(-50%, 0%);
         transform: translate(-50%, 0%);
         border-style: solid;
@@ -635,7 +636,6 @@ div[ng-class="fr_CA"] {
         left: 50%;  
     }  
     .active {
-        font-size: 12px;
         width: 80%;
         margin: 0 auto;
     }
